- BsTabs: fix tab alignment not working properly - BsChipField: fix input field width - Update CHANGELOG.md

--- a/src/components/Field/chipField.scss
+++ b/src/components/Field/chipField.scss
@@ -22,12 +22,16 @@
         //~ .#{$prefix}chip {
         //    margin-left: 0;
         //}
+
+        + input {
+            width: auto !important;
+        }
     }
 
     input {
         min-width: 85px;
         max-width: 100%;
-        width: auto;
+        // width: auto;
     }
 
     &.#{$prefix}field-outlined {
